Remove the notion of pull requests; here come the ticket IDs
Ticket IDs are a universal way of specifying pull request, since they
are called something different on each platform.
