# ci-gen/grpc/types/submission.pb.go
@@ -33,6 +33,7 @@ type Submission struct {
 	StatusSet            bool                 `protobuf:"varint,9,opt,name=statusSet,proto3" json:"statusSet,omitempty"`
 	StartedAt            *timestamp.Timestamp `protobuf:"bytes,10,opt,name=startedAt,proto3" json:"startedAt,omitempty"`
 	Canceled             bool                 `protobuf:"varint,11,opt,name=canceled,proto3" json:"canceled,omitempty"`
+	TicketID             int64                `protobuf:"varint,12,opt,name=ticketID,proto3" json:"ticketID,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}             `json:"-"`
 	XXX_unrecognized     []byte               `json:"-"`
 	XXX_sizecache        int32                `json:"-"`
@@ -140,6 +141,13 @@ func (m *Submission) GetCanceled() bool {
 	return false
 }
 
+func (m *Submission) GetTicketID() int64 {
+	if m != nil {
+		return m.TicketID
+	}
+	return 0
+}
+
 type SubmissionList struct {
 	Submissions          []*Submission `protobuf:"bytes,1,rep,name=submissions,proto3" json:"submissions,omitempty"`
 	XXX_NoUnkeyedLiteral struct{}      `json:"-"`
@@ -189,29 +197,30 @@ func init() {
 }
 
 var fileDescriptor_9f00c03eb97056e8 = []byte{
-	// 380 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x92, 0xb1, 0x8a, 0xdb, 0x40,
-	0x10, 0x86, 0x91, 0x7d, 0xe7, 0xb3, 0x47, 0x70, 0x90, 0x2d, 0xc2, 0x62, 0x42, 0x62, 0x8e, 0x14,
-	0x6e, 0x4e, 0x0b, 0x77, 0x45, 0x8e, 0x04, 0x02, 0x49, 0x48, 0x97, 0x6a, 0x2f, 0x69, 0xd2, 0xad,
-	0xa4, 0xd1, 0x7a, 0x89, 0xbd, 0x2b, 0x34, 0xa3, 0xe2, 0x9e, 0x29, 0x2f, 0x19, 0xb4, 0x92, 0x2d,
-	0x41, 0x0a, 0xe3, 0x6e, 0x76, 0xfe, 0x6f, 0x7e, 0xcd, 0x8c, 0x06, 0x3e, 0x5b, 0xc7, 0xbb, 0x36,
-	0xcf, 0x8a, 0x70, 0x50, 0xec, 0xfc, 0x4b, 0xe1, 0x54, 0xe1, 0xee, 0x8d, 0x45, 0xcf, 0xd4, 0x45,
-	0x16, 0xbd, 0xb2, 0x4d, 0x5d, 0x28, 0x7e, 0xa9, 0x91, 0x14, 0xb5, 0xf9, 0xc1, 0x11, 0xb9, 0xe0,
-	0xb3, 0xba, 0x09, 0x1c, 0xc4, 0x75, 0xcc, 0xaf, 0x3f, 0x4d, 0x6c, 0x6c, 0xd8, 0x1b, 0x6f, 0x55,
-	0xd4, 0xf3, 0xb6, 0x52, 0x75, 0x5f, 0xca, 0xee, 0x80, 0xc4, 0xe6, 0x50, 0x8f, 0x51, 0xef, 0xb1,
-	0xfe, 0x70, 0x59, 0x0f, 0x0d, 0x56, 0x43, 0xe1, 0xd3, 0x65, 0x85, 0x2d, 0x61, 0xd3, 0x57, 0xde,
-	0xfd, 0x9d, 0x03, 0x3c, 0x9f, 0x66, 0x11, 0xb7, 0x30, 0x73, 0xa5, 0x4c, 0x36, 0xc9, 0x76, 0xae,
-	0x67, 0xae, 0x14, 0xef, 0xe1, 0x66, 0x87, 0xa6, 0xd4, 0x58, 0xc9, 0xd9, 0x26, 0xd9, 0xa6, 0x0f,
-	0x90, 0x45, 0x8b, 0x4c, 0x63, 0xa5, 0x8f, 0x52, 0x47, 0xe5, 0x86, 0xb0, 0xa3, 0xe6, 0xff, 0x53,
-	0x83, 0x24, 0xde, 0xc1, 0x55, 0xf7, 0x61, 0x79, 0x15, 0x91, 0x74, 0x40, 0x7e, 0x11, 0x36, 0x3a,
-	0x0a, 0xe2, 0x09, 0x56, 0x45, 0x83, 0x86, 0xb1, 0xfc, 0xc2, 0xf2, 0x3a, 0x52, 0xeb, 0xcc, 0x86,
-	0x60, 0xf7, 0x98, 0x1d, 0x97, 0x98, 0xfd, 0x3c, 0xee, 0x4c, 0x8f, 0xb0, 0x78, 0x0b, 0xc0, 0x86,
-	0xfe, 0xd0, 0xb7, 0xd0, 0x7a, 0x96, 0x8b, 0xd8, 0xfe, 0x24, 0x23, 0x3e, 0x02, 0x54, 0xce, 0x3b,
-	0xda, 0x45, 0xeb, 0x9b, 0xb3, 0xd6, 0x13, 0x5a, 0xbc, 0x86, 0x05, 0xb1, 0xe1, 0x96, 0xe4, 0x72,
-	0x93, 0x6c, 0x97, 0x7a, 0x78, 0x89, 0x37, 0xb0, 0xea, 0xa3, 0x67, 0x64, 0xb9, 0x8a, 0xd2, 0x98,
-	0xe8, 0x66, 0x21, 0x36, 0x4d, 0x3f, 0x0b, 0x9c, 0x9f, 0xe5, 0x04, 0x8b, 0x35, 0x2c, 0x0b, 0xe3,
-	0x0b, 0xdc, 0x63, 0x29, 0xd3, 0x68, 0x7b, 0x7a, 0xdf, 0x7d, 0x87, 0xdb, 0xf1, 0x67, 0xfd, 0x70,
-	0xc4, 0xe2, 0x11, 0xd2, 0xf1, 0x14, 0x49, 0x26, 0x9b, 0xf9, 0x36, 0x7d, 0x78, 0x35, 0xec, 0x76,
-	0x64, 0xf5, 0x94, 0xfa, 0xaa, 0x7e, 0xdf, 0x5f, 0x74, 0x30, 0xf9, 0x22, 0xb6, 0xfc, 0xf8, 0x2f,
-	0x00, 0x00, 0xff, 0xff, 0x78, 0x5c, 0xbe, 0x46, 0x25, 0x03, 0x00, 0x00,
+	// 394 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x92, 0x4f, 0x8b, 0xdb, 0x30,
+	0x10, 0xc5, 0x71, 0xb2, 0x9b, 0x4d, 0xc6, 0x65, 0xa1, 0x3a, 0x14, 0x11, 0x4a, 0x1b, 0x96, 0x1e,
+	0x72, 0x59, 0x1b, 0x76, 0x0f, 0x5d, 0x5a, 0x28, 0xf4, 0xdf, 0xa1, 0xd0, 0x93, 0xb6, 0xbd, 0xf4,
+	0x26, 0xcb, 0x63, 0x45, 0x6c, 0x22, 0x19, 0xcf, 0xf8, 0xb0, 0x9f, 0xb0, 0x5f, 0xab, 0x58, 0x76,
+	0xe2, 0x40, 0x0f, 0x21, 0x37, 0xcd, 0xbc, 0xdf, 0x3c, 0xeb, 0x8d, 0x05, 0x9f, 0xac, 0xe3, 0x4d,
+	0x5b, 0x64, 0x26, 0xec, 0x72, 0x76, 0xfe, 0xd9, 0xb8, 0xdc, 0xb8, 0x5b, 0x6d, 0xd1, 0x33, 0x75,
+	0x27, 0x8b, 0x3e, 0xb7, 0x4d, 0x6d, 0x72, 0x7e, 0xae, 0x91, 0x72, 0x6a, 0x8b, 0x9d, 0x23, 0x72,
+	0xc1, 0x67, 0x75, 0x13, 0x38, 0x88, 0xcb, 0xd8, 0x5f, 0x7e, 0x3c, 0xb2, 0xb1, 0x61, 0xab, 0xbd,
+	0xcd, 0xa3, 0x5e, 0xb4, 0x55, 0x5e, 0xf7, 0xa3, 0xec, 0x76, 0x48, 0xac, 0x77, 0xf5, 0x78, 0xea,
+	0x3d, 0x96, 0xef, 0xcf, 0xbb, 0x43, 0x83, 0xd5, 0x30, 0xf8, 0x70, 0xde, 0x60, 0x4b, 0xd8, 0xf4,
+	0x93, 0x37, 0x7f, 0xa7, 0x00, 0x8f, 0x87, 0x2c, 0xe2, 0x1a, 0x26, 0xae, 0x94, 0xc9, 0x2a, 0x59,
+	0x4f, 0xd5, 0xc4, 0x95, 0xe2, 0x1d, 0x5c, 0x6d, 0x50, 0x97, 0x0a, 0x2b, 0x39, 0x59, 0x25, 0xeb,
+	0xf4, 0x0e, 0xb2, 0x68, 0x91, 0x29, 0xac, 0xd4, 0x5e, 0xea, 0xa8, 0x42, 0x13, 0x76, 0xd4, 0xf4,
+	0x7f, 0x6a, 0x90, 0xc4, 0x5b, 0xb8, 0xe8, 0x3e, 0x2c, 0x2f, 0x22, 0x92, 0x0e, 0xc8, 0x6f, 0xc2,
+	0x46, 0x45, 0x41, 0x3c, 0xc0, 0xc2, 0x34, 0xa8, 0x19, 0xcb, 0xcf, 0x2c, 0x2f, 0x23, 0xb5, 0xcc,
+	0x6c, 0x08, 0x76, 0x8b, 0xd9, 0x7e, 0x89, 0xd9, 0xaf, 0xfd, 0xce, 0xd4, 0x08, 0x8b, 0x37, 0x00,
+	0xac, 0xe9, 0x89, 0xbe, 0x86, 0xd6, 0xb3, 0x9c, 0xc5, 0xeb, 0x1f, 0x75, 0xc4, 0x07, 0x80, 0xca,
+	0x79, 0x47, 0x9b, 0x68, 0x7d, 0x75, 0xd2, 0xfa, 0x88, 0x16, 0xaf, 0x60, 0x46, 0xac, 0xb9, 0x25,
+	0x39, 0x5f, 0x25, 0xeb, 0xb9, 0x1a, 0x2a, 0xf1, 0x1a, 0x16, 0xfd, 0xe9, 0x11, 0x59, 0x2e, 0xa2,
+	0x34, 0x36, 0xba, 0x2c, 0xc4, 0xba, 0xe9, 0xb3, 0xc0, 0xe9, 0x2c, 0x07, 0x58, 0x2c, 0x61, 0x6e,
+	0xb4, 0x37, 0xb8, 0xc5, 0x52, 0xa6, 0xd1, 0xf6, 0x50, 0x77, 0x1a, 0x3b, 0xf3, 0x84, 0xfc, 0xe3,
+	0x9b, 0x7c, 0x11, 0x53, 0x1e, 0xea, 0x9b, 0xef, 0x70, 0x3d, 0xfe, 0xc8, 0x9f, 0x8e, 0x58, 0xdc,
+	0x43, 0x3a, 0x3e, 0x53, 0x92, 0xc9, 0x6a, 0xba, 0x4e, 0xef, 0x5e, 0x0e, 0x7b, 0x1f, 0x59, 0x75,
+	0x4c, 0x7d, 0xc9, 0xff, 0xdc, 0x9e, 0xf5, 0x98, 0x8a, 0x59, 0x8c, 0x73, 0xff, 0x2f, 0x00, 0x00,
+	0xff, 0xff, 0x55, 0x2c, 0x4d, 0xe8, 0x41, 0x03, 0x00, 0x00,
 }
